# SLEAPtoOpenGL

./: CMakeLists.txt  skeleton_projection.cpp
config/: nvinfer_pose_config.txt
scripts/: build.sh  build_engine_main.cpp  download_model.sh  setup_env.sh
src/: cuda_kernels.cu  cuda_kernels.cuh  gl_renderer.cpp  gl_renderer.hpp  latency_monitor.hpp  main.cpp  pipeline.cpp  pipeline.hpp  pose_similarity.hpp  skeleton.cpp  skeleton.hpp  trt_infer.cpp  trt_infer.hpp
